fix: bug where gradient would end prematurely when viewing on mobile
This commit fixes (again) a mobile bug that would cause the gradient to cut off near the bottom of the page, rather than continuing smoothly all the way down. Not sure why it came back.

--- a/portfolio-client/src/app/(pages)/(index)/page.module.css
+++ b/portfolio-client/src/app/(pages)/(index)/page.module.css
@@ -1,6 +1,6 @@
 .page {
-  /*position: relative;*/
-  overflow: scroll;
+  position: relative;
+  /*overflow: scroll;*/
   /*!*display: grid;*!*/
   /*!*grid-template-rows: 20px 1fr 20px;*!*/
   /*!*justify-items: center;*!*/
@@ -9,20 +9,20 @@
   /*!*gap: 64px;*!*/
 }
 
-.background {
-  background-repeat: no-repeat;
-  /*background-image: url('/BackgroundImageBlur.jpg');*/
+/*.background {*/
+/*  background-repeat: no-repeat;*/
+/*  !*background-image: url('/BackgroundImageBlur.jpg');*!*/
 
-  position: fixed; /* fix the background relative to the viewport */
-  top: 50%;
-  left: 50%;
-  width: 100%;
-  height: 100%;
-  background-size: cover;
-  transform: translate(-50%, -50%) scale(1.1); /* centre and scale */
-  transform-origin: center;
-  z-index: -1; /* ensure the background stays behind your content */
-}
+/*  position: fixed; !* fix the background relative to the viewport *!*/
+/*  top: 50%;*/
+/*  !*left: 50%;*!*/
+/*  width: 100%;*/
+/*  height: 100%;*/
+/*  background-size: cover;*/
+/*  transform: translate(-50%, -50%) scale(1.1); !* centre and scale *!*/
+/*  transform-origin: center;*/
+/*  z-index: -1; !* ensure the background stays behind your content *!*/
+/*}*/
 
 
 @media (prefers-color-scheme: dark) {
